cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Lesson 8 - cloudformation for lesson7
Outputs:
  windows1ip:
    Description: windows1 details
    Value: !GetAtt windows1.PublicIp
  windows2ip:
    Description: windows2 details
    Value: !GetAtt windows2.PublicIp
Parameters:
  CidrBlock:
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 172.31.0.0/16
    Description: VPC CIDR Block (eg 10.0.0.0/16)
    Type: String
  CidrSubnetBlock:
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 172.31.0.0/20
    Description: Subnet CIDR Block (eg 10.0.0.0/16)
    Type: String
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  myKeyPair: 
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"
Resources:
  lesson8vpc: 
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 
        Ref: CidrBlock
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: lesson8vpc
  lesson8subnetpublic1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: lesson8vpc
      CidrBlock:
        Ref: CidrSubnetBlock
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone: "eu-central-1a"
      Tags:
      - Key: Name
        Value: lesson8subnetpublic1
  lesson8igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: lesson8igw
  lesoon8attach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: lesson8vpc
      InternetGatewayId:
        Ref: lesson8igw
  lesson8publiccrt:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: lesson8vpc
      Tags:
      - Key: Name
        Value: lesson8publiccrt
  lesson8routeinternet:
    Type: AWS::EC2::Route
    DependsOn: lesson8publiccrt
    Properties:
       RouteTableId:
         Ref: lesson8publiccrt
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: lesson8igw   
  lesson8crtapublicsubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: lesson8subnetpublic1
      RouteTableId:
        Ref: lesson8publiccrt
  lesson8http:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
         Ref: lesson8vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: 0
        ToPort: 0
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: lesson8http
  lesson8rdp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow rdp to client host
      VpcId:
         Ref: lesson8vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: 0
        ToPort: 0
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: lesson8rdp
  lesson8winrm:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow winrm to client host
      VpcId:
         Ref: lesson8vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5985
        ToPort: 5985
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: 0
        ToPort: 0
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: lesson8winrm
  windows1: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-09a53ec51d0027c28
      KeyName: 
        Ref: myKeyPair
      InstanceType: 
        Ref: InstanceTypeParameter
      SecurityGroupIds:
            - Ref: lesson8winrm
            - Ref: lesson8http
            - Ref: lesson8rdp
      SubnetId: 
        Ref: lesson8subnetpublic1
      UserData:
        'Fn::Base64': !Sub |
              <powershell>
              Start-Transcript -Path C:\winrm.log
              Enable-PSRemoting -force
              Set-Item WSMan:\localhost\Client\TrustedHosts -Value * -force
              Set-Item WSMan:\localhost\Service\EnableCompatibilityHttpListener $true
              netsh advfirewall firewall add rule name="Windows Remote Management (HTTPS-In)" dir=in action=allow protocol=TCP localport=5985
              Restart-Service WinRM
              Install-WindowsFeature -name Web-Server -IncludeManagementTools
              Import-Module WebAdministration
              Remove-Website -Name "Default Web Site"
              New-Item -ItemType Directory -Name 'Server1' -Path 'C:\'
              New-Item -ItemType File -Name 'index.html' -Path 'C:\Server1\'
              Add-Content -Path C:\Server1\index.html -Value '<!DOCTYPE html>
              <html>
                  <head>
                      <title>Server 1 DEMO</title>
                  </head>
                  <body>
                      <h1>Server 1 DEMO</h1>
                      <p>All work</p>
                  </body>
              </html>'
              New-WebAppPool -Name "NewAppPool"
              New-WebSite -Name "Server1" -Port 80 -PhysicalPath "C:\Server1\" -ApplicationPool "NewAppPool"
              New-NetFirewallRule -DisplayName "Allow Port 80" -Direction Inbound -LocalPort 80 -Protocol TCP -Action Allow
              Stop-Transcript
              </powershell>
      Tags:
      - Key: Name
        Value: windows1
  windows2: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-09a53ec51d0027c28
      KeyName: 
        Ref: myKeyPair
      InstanceType: 
        Ref: InstanceTypeParameter
      SecurityGroupIds:
            - Ref: lesson8winrm
            - Ref: lesson8http
            - Ref: lesson8rdp
      SubnetId: 
        Ref: lesson8subnetpublic1
      UserData:
        'Fn::Base64': !Sub |
              <powershell>
              Start-Transcript -Path C:\winrm.log
              Enable-PSRemoting -force
              Set-Item WSMan:\localhost\Client\TrustedHosts -Value * -force
              Set-Item WSMan:\localhost\Service\EnableCompatibilityHttpListener $true
              netsh advfirewall firewall add rule name="Windows Remote Management (HTTPS-In)" dir=in action=allow protocol=TCP localport=5985
              Restart-Service WinRM
              Install-WindowsFeature -name Web-Server -IncludeManagementTools
              Import-Module WebAdministration
              Remove-Website -Name "Default Web Site"
              New-Item -ItemType Directory -Name 'Server1' -Path 'C:\'
              New-Item -ItemType File -Name 'index.html' -Path 'C:\Server1\'
              Add-Content -Path C:\Server1\index.html -Value '<!DOCTYPE html>
              <html>
                  <head>
                      <title>Server 2 DEMO</title>
                  </head>
                  <body>
                      <h1>Server 2 DEMO</h1>
                      <p>All work</p>
                  </body>
              </html>'
              New-WebAppPool -Name "NewAppPool"
              New-WebSite -Name "Server1" -Port 80 -PhysicalPath "C:\Server1\" -ApplicationPool "NewAppPool"
              New-NetFirewallRule -DisplayName "Allow Port 80" -Direction Inbound -LocalPort 80 -Protocol TCP -Action Allow
              Stop-Transcript
              </powershell>
      Tags:
      - Key: Name
        Value: windows2
  lesson8elb:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      CrossZone: true
      Listeners:
      - InstancePort: '80'
        InstanceProtocol: HTTP
        LoadBalancerPort: '80'
        Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: '2'
        UnhealthyThreshold: '3'
        Interval: '10'
        Timeout: '5'
      Subnets:
          - Ref: lesson8subnetpublic1
      SecurityGroups:
          - Ref: lesson8winrm
          - Ref: lesson8http
          - Ref: lesson8rdp
      Instances:
          - Ref: windows1
          - Ref: windows2
      Tags:
      - Key: Name
        Value: lesson8elb
